[project]
name = "sensorbio-mcp-server"
version = "0.1.0"
description = "MCP server for Sensr (getsensr.io)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sensor Bio" }]
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27",
  "anyio>=4.0",
  # MCP Python SDK. Package name is `mcp`.
  "mcp>=1.2.0",
]

[project.scripts]
sensorbio-mcp-server = "sensorbio_mcp_server.server:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-q"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
